k8s/acquirer-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acquirer-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: acquirer-backend
  template:
    metadata:
      labels:
        component: acquirer-backend
    spec:
      containers:
        - name: acquirer-backend
          image: twstm/acquirer-backend:0.0.3k
          ports:
            - containerPort: 5555
