k8s/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  selector:
    matchLabels:
      component: minio
  replicas: 1 
  template:
    metadata:
      labels:
        component: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2023-07-21T21-12-44Z
        args:
          - server
          - /data
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: storage
          mountPath: "/data"
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-s3-pvc
