k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      component: rabbitmq
  template:
    metadata:
      labels:
        component: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3.12.4-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
