k8s/registry-oracle-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-oracle-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: registry-oracle
  template:
    metadata:
      labels:
        component: registry-oracle
    spec:
      containers:
        - name: registry-oracle
          image: twstm/registry-oracle:0.0.3k
          ports:
            - containerPort: 8888
