k8s/acquirer-backend-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acquirer-backend-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: acquirer-backend
  ports:
    - port: 5555
      targetPort: 5555
