k8s/merchant-db-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: merchant-db-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: merchant-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
