k8s/minio-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-clusterip-service
spec:
  type: ClusterIP
  ports:
  - port: 9000
    targetPort: 9000
  selector:
    component: minio
