k8s/registry-oracle-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry-oracle-clusterip-service
spec:
  type: ClusterIP
  selector:
    component: registry-oracle
  ports:
    - port: 8888
      targetPort: 8888
